styles/cs-meme.css
/* *******************************************
General settings for this case study article
******************************************** */

.article-wrap {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.case-study {
	max-width: 660px;
	min-width: 250px;
	margin: 0px 5%;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Work Sans', sans-serif;
	color: #383838;
	text-align: center;	
	margin: 0px auto;
}

p {
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	color: #383838;
	line-height: 140%;
}

a:link {
	color: #A2078D;
}

a:visited {
	color: #6D0A5F;
}

img {
  max-width: 100%;
  vertical-align: middle;
  display: inline-block;
}


/* ************************************************************************
Footer section with "back to top" button, social media, and copyright info 
************************************************************************* */

footer {
	font-family: 'Open Sans', sans-serif;
	color: #FFF;
}

.back-top-bar {
	background-color: #fff;
}

.back-top-wrap {
	width: 120px;
	margin: 0 auto;
	padding-top: 4px;
	padding-bottom: 14px;
	font-family: 'Open Sans', sans-serif;
	text-transform: uppercase;
	color: #404040;
	font-size: 92%;
	font-weight: 600;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.back-top-button {	
	width: 120px;
	margin: 0 auto;
	display: block;
	text-decoration: none;
}

.back-top-text {
	text-decoration: underline;	
}

.fas {
	width: 100%;
	font-size: 180%;
	text-align: center;	
}

/* *************************************************************************
Copyright info & social media links
************************************************************************** */

.footer-bar {
	background-color: #333333;
	font-family: 'Open Sans', sans-serif;
	color: #ffffff;
	font-weight: 200;
	font-size: 95%;
	display: flex;
	align-items: flex-end;
	padding: 20px 0px;
}

.copyright {
	width: 50%;
	margin: 0;
	padding-left: 20px;
	font-size: 85%;
	line-height: 130%;
	text-align: left;
	letter-spacing: 0.4px;
}

.social-footer-wrap {
	width: 50%;
	padding-right: 9px;
	margin: 0;
	display: flex;
	justify-content: flex-end;
}

.social-link {
	padding: 0px;
	display: inline-flex;
    align-items: center;
	text-decoration: none;
}

.social-text {
	font-family: 'Open Sans', sans-serif;
	text-transform: uppercase;
	color: #ffffff;
	font-weight: 200;
	font-size: 87%;
	letter-spacing: 0.2px;
	padding: 0px 11px;
	text-decoration: underline;
}

.social-button {
	width: 35px;
	margin: 0px 11px;
}

/* **************************************************************
MEDIA QUERIES for FOOTER BAR on MOBILE DEVICES 
*************************************************************** */

@media (max-width: 530px) {

    .footer-bar {
    	background-color: #303030;
    	display: flex;
    	flex-direction: column;
		align-items: center;
    	padding: 20px 0px;
    }
	
	.copyright {
    	width: 100%;
		margin-bottom: 10px;
		padding: 0;
    	font-family: 'Open Sans', sans-serif;
    	color: #ffffff;
    	font-weight: 200;
    	font-size: 85%;
    	text-align: center;
    	letter-spacing: 0.2px;
		order: 2;
    }
	
    .social-footer-wrap {
    	width: 100%;
    	margin: 10px 0px 20px;
		padding: 0;
    	display: flex;
    	justify-content: center;
		order: 1;
    }

	.social-button {
		width: 35px;
		margin: 0px 11px 5px;
		
	}
	
	.social-link {
		padding: 0px;
		display: inline-flex;
		align-items: center;
		text-decoration: none;
	}
	
	.social-text {
		font-family: 'Open Sans', sans-serif;
		text-transform: uppercase;
		color: #ffffff;
		font-weight: 200;
		font-size: 87%;
		letter-spacing: 0.2px;
		padding: 0px 8px;
		text-decoration: underline;
	}
}


/* *************************************************************************
************************************************************************** */

/* *************************************************************************
FORMAT CONTENT - SECTIONS & COLUMNS
************************************************************************** */

.meme-header {
	height: 320px;
	background-image: url(../images/cs-meme/meme-header-img.png);
	background-size: cover;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}

.dark-meme-wrap {
	background-image: url(../images/cs-meme/meme-cs-bkgd-img.png);
	background-position: 0% 0%;
	display: flex;
	justify-content: center;
}

.dark-solid-wrap {
	background-color: #332F79;
	background-position: 0% 0%;
	display: flex;
	justify-content: center;
	margin-bottom: 70px;
}

.one-half {
	width: 50%;
	padding: 0px;
	margin: 0px;
}

.one-third {
	width: 33.33%;
	padding: 0px;
	margin: 0px;
}

/* ****************************************************************************
CASE STUDY TITLE SETTINGS
***************************************************************************** */

.title {
	margin: 50px 5px 70px;
}

.title h2 {
	text-decoration: underline;
	margin-bottom: 5px;
}

.intro h2 {
	margin-bottom: 20px;
}

.superscript {
	vertical-align: super;
	font-size: .43em;
	font-weight: 600;
}

/* *********************************************************************************
SECTION - ABOUT THIS PROJECT
********************************************************************************** */

.intro {
	margin-bottom: 35px;
}

.view-prototype {
	margin-bottom: 70px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.view-prototype img {
	max-width: 500px;
	min-width: 220px;
	width: 100%;
	margin: 22px 15px 0px 15px;
}

.button-link {
	width: 170px;
	height: 40px;
	display: flex;
    justify-content: center;
    align-items: center;
	padding-top: 1px;
	border: solid #383838;
	text-decoration: none;
}

.button-text {
	font-family: 'Open Sans', sans-serif;
	font-weight: 600;
	color: #383838;
}

.problem-solution h3 {
	margin-bottom: 20px;
}

.problem-solution {
	margin-bottom: 50px;
}
/* ... */

